deploy/backend.yml
# 3. BACKEND DEPLOYMENT (Express Server)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  labels:
    tier: backend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/jason9339/moojidle-k8s/backend:latest
        
        # Explicitly grabbing individual keys using valueFrom
        ports:
        # Remember: This must be manually updated if you change the ConfigMap PORT
        - containerPort: 3000

---
# 4. BACKEND SERVICE
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 3000
    # Remember: This must also be manually updated if you change the ConfigMap PORT
    targetPort: 3000
