deploy/frontend.yml
# 2. FRONTEND DEPLOYMENT (NginX server with no port forwarding)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  labels:
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/jason9339/moojidle-k8s/frontend:latest

        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 25m
            memory: 32Mi

        # Mount the ConfigMap into the container
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf  # Crucial: ensures we only overwrite the file, not the whole /etc/nginx dir
      volumes:
      - name: nginx-config-volume
        configMap:
          name: frontend-config

---
# 3. FRONTEND SERVICE
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - port: 8080
    targetPort: 8080
